made supply and demand distribution resource specific